[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources_Scenes/FlyingPlatformSmall/floating_platform_small.png" type="Texture" id=1]
[ext_resource path="res://Resources_Scenes/FlyingPlatformSmall/floatingPlatform.gd" type="Script" id=2]

[node name="StaticBody2D" type="StaticBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 37
collision_mask = 36
script = ExtResource( 2 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
position = Vector2( 4, 0 )
polygon = PoolVector2Array( -7.062, -1.41, -7.57, -1.41, -7.57, -0.288, -8, -0.288, -8, 0.84375, -7.58, 0.844, -7.58, 2, -5, 1, -3.5, 2, -2.5, 1, 0, 2, 0, -0.856, -0.42, -0.856, -0.42, -1.414, -0.935, -1.414, -0.93512, -2, -7.06173, -2 )

[node name="Polygon2D" type="Polygon2D" parent="CollisionPolygon2D2"]
texture = ExtResource( 1 )
texture_offset = Vector2( 8.088, 1.978 )
texture_scale = Vector2( 1.957, 1.774 )
polygon = PoolVector2Array( -8, -2, 0, -2, 0, 0, 0, 2, -2.5, 2, -8, 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 4, 0 )
polygon = PoolVector2Array( -7.062, -1.6, -7.57, -1.6, -7.57, -0.4, -8, -0.4, -8, 0.84375, -7.58, 0.844, -7.58, 2, -5, 1, -3.5, 2, -2.5, 1, 0, 2, 0, -1, -0.42, -1, -0.42, -1.6, -0.935, -1.614, -0.935, -2.3, -7.062, -2.3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
